# smd-tape-cutter

./: README.md
firmware/: CMakeLists.txt  prj.conf  stepper_config.overlay
firmware/dts/bindings/: steppers.yaml
firmware/src/: main.c  shell.c  stepper.c  stepper.h  zerhacker.c  zerhacker.h
